tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/bad-hex-esc-3.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-3 = "\x"
  |                    ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
